Fix: 메뉴, 주문 로직 수정
-클래스 -> 레코드 변경
-주문로그 aspect 수정
- 레코드 변경으로 인한 get부분 수정
-정적팩토리메서드 사용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 spring.application.name=outsourcing
 
+server.port=8051
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost/outsourcing
+spring.datasource.username=root
+spring.datasource.password=jmgptw13!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-secretKey=bXlTZWNyZXRLZXlGb3JKV1Q=
+jwt.secret.key=bXlTZWNyZXRLZXlGb3JKV1Q=
