--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=outsourcing
 jwt.secret.key=D8a25//2G7+Ha6Crbh9goqhudgIAz/Kh4rZgLvhFIUo=
 
 server.port=8033
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/outsourcing
 spring.datasource.username=root
 spring.datasource.password=jmgptw13!
