--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,17 @@
 spring.application.name=outsourcing
+# H2 ?????? ??
+spring.datasource.url=jdbc:h2:mem:testdb        # ???? H2 ?????? ??
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa                  # ?? ???
+spring.datasource.password=                    # ?? ????(?? ??)
+
+# JPA ??
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# H2 ?? ???
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 
-secretKey=bXlTZWNyZXRLZXlGb3JKV1Q=
+jwt.secret.key=D8a25//2G7+Ha6Crbh9goqhudgIAz/Kh4rZgLvhFIUo=
